remove incorrect wrapping of midnight, noon in t() css fix for popup calendar overlap

--- a/room_reservations.css
+++ b/room_reservations.css
@@ -217,3 +217,6 @@
   width: 244px !important;
 }
 
+#ui-datepicker-div {
+  z-index:2 !important;
+}
